--- a/registro.html
+++ b/registro.html
@@ -18,7 +18,7 @@
                         <label class="placeholder" for="login">nome</label>
                     </div>
                     <div class="form-item">
-                        <input class="input-grupo" type="text" id="email" name="user" required autocomplete="on" placeholder=".">
+                        <input class="input-grupo" type="email" id="email" name="user" required autocomplete="on" placeholder=".">
                         <label class="placeholder" for="login">email</label>
                     </div>
                     <div class="form-item">
